--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/LeftGuid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="30dp"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/RightGuid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_end="30dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/UpGuid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="40dp"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/DownGuid"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_end="40dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/bmiView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="116dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="140dp"
         android:text="@string/bmi"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:visibility="visible"
+        android:layout_gravity='center_horizontal'
         app:layout_constraintBottom_toTopOf="@+id/DownGuidline"
         app:layout_constraintEnd_toStartOf="@+id/RightGuidline"
         app:layout_constraintHorizontal_bias="0.496"
@@ -62,8 +27,7 @@
         app:layout_constraintStart_toStartOf="@+id/LeftGuidline"
         app:layout_constraintTop_toBottomOf="@+id/button"
         tools:text="@string/bmi"
-        tools:visibility="visible"
-        />
+        tools:visibility="visible" />
 
     <Button
         android:id="@+id/button"
@@ -71,18 +35,20 @@
         android:layout_height="53dp"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:onClick="calculateBMI"
         android:text="@string/calculate"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#ffffff"
+        android:layout_gravity='center_horizontal'
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/bmiView"
         app:layout_constraintEnd_toStartOf="@+id/RightGuidline"
         app:layout_constraintStart_toStartOf="@+id/LeftGuidline"
-        app:layout_constraintTop_toBottomOf="@+id/heightText"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/heightText" />
 
     <TextView
         android:id="@+id/massView"
@@ -91,28 +57,28 @@
         android:layout_marginTop="65dp"
         android:layout_marginBottom="10dp"
         android:text="@string/mass"
+        android:layout_gravity='center_horizontal'
         app:layout_constraintBottom_toTopOf="@+id/massText"
         app:layout_constraintEnd_toStartOf="@+id/RightGuidline"
         app:layout_constraintHorizontal_bias="0.464"
         app:layout_constraintStart_toStartOf="@+id/LeftGuidline"
         app:layout_constraintTop_toTopOf="@id/UperGuideline"
-        tools:text="@string/mass"
-        />
+        tools:text="@string/mass" />
 
     <TextView
         android:id="@+id/heightView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="10dp"
         android:text="@string/height"
+        android:layout_gravity='center_horizontal'
         app:layout_constraintBottom_toTopOf="@+id/heightText"
         app:layout_constraintEnd_toStartOf="@+id/RightGuidline"
         app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="@+id/LeftGuidline"
         app:layout_constraintTop_toBottomOf="@+id/massText"
-        tools:text="@string/height"
-        />
+        tools:text="@string/height" />
 
     <EditText
         android:id="@+id/massText"
@@ -126,14 +92,14 @@
         android:ems="10"
         android:hint="@string/enter_mass"
         android:inputType="numberSigned"
+        android:layout_gravity='center_horizontal'
         app:layout_constraintBottom_toTopOf="@+id/heightView"
         app:layout_constraintEnd_toStartOf="@+id/RightGuidline"
         app:layout_constraintHorizontal_bias="0.082"
         app:layout_constraintStart_toStartOf="@id/LeftGuidline"
         app:layout_constraintTop_toBottomOf="@+id/massView"
         app:layout_constraintVertical_bias="0.0"
-        tools:text="@string/enter_mass"
-        />
+        tools:text="@string/enter_mass" />
 
     <EditText
         android:id="@+id/heightText"
@@ -143,13 +109,13 @@
         android:ems="10"
         android:hint="@string/enter_height"
         android:inputType="numberSigned"
+        android:layout_gravity='center_horizontal'
         app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toStartOf="@+id/RightGuidline"
         app:layout_constraintStart_toStartOf="@+id/LeftGuidline"
         app:layout_constraintTop_toBottomOf="@+id/heightView"
         app:layout_constraintVertical_bias="0.0"
-        tools:text="@string/enter_height"
-        />
+        tools:text="@string/enter_height" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/LeftGuidline"
@@ -159,8 +125,7 @@
         android:layout_marginLeft="30dp"
         android:orientation="vertical"
         app:layout_constraintGuide_begin="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/UperGuideline"
@@ -169,8 +134,7 @@
         android:layout_marginTop="40dp"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/RightGuidline"
@@ -180,8 +144,7 @@
         android:layout_marginRight="30dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintGuide_begin="379dp"
-        />
+        app:layout_constraintGuide_begin="379dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/DownGuidline"
@@ -190,27 +153,66 @@
         android:layout_marginBottom="40dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintGuide_end="40dp"
-        />
+        app:layout_constraintGuide_end="40dp" />
 
-    <Button
-        android:id="@+id/MenuButton"
-        android:layout_width="67dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="46dp"
-        android:layout_marginLeft="46dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="298dp"
-        android:layout_marginBottom="67dp"
-        android:text="@string/GoMenu"
-        app:layout_constraintBottom_toTopOf="@id/DownGuidline"
-        app:layout_constraintEnd_toEndOf="@id/RightGuidline"
-        app:layout_constraintHorizontal_bias="0.49"
+
+
+    <RadioButton
+        android:id="@+id/btn_metric"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="45dp"
+        android:onClick="setSystemOfUnits"
+        android:text="@string/metric"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toStartOf="@+id/btn_imperial"
         app:layout_constraintStart_toStartOf="@id/LeftGuidline"
-        app:layout_constraintTop_toTopOf="@id/UperGuideline"
-        app:layout_constraintVertical_bias="0.01999998"
-        tools:text="@string/GoMenu"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/heightText" />
+
+    <RadioButton
+        android:id="@+id/btn_imperial"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="45dp"
+        android:onClick="setSystemOfUnits"
+        android:text="@string/imperial"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@id/RightGuidline"
+        app:layout_constraintStart_toEndOf="@+id/btn_metric"
+        app:layout_constraintTop_toBottomOf="@+id/heightText" />
+
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_more_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="30dp"
+        android:text="@string/more_information"
+        android:textColor="#ffffff"
+        android:layout_gravity='center_horizontal'
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="@id/DownGuidline"
+        app:layout_constraintEnd_toEndOf="@id/RightGuidline"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="@id/LeftGuidline"
+        app:layout_constraintTop_toBottomOf="@+id/bmiView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
